services/orders/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: orders
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
  selector:
    app: orders
